added up to euler #11

--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -391,65 +391,57 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
               <h4 class="euler-problem-title">Problem 12 - Highly divisible triangular number</h4>
               <p><em>
-                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.
-                <br><br>
-                Find the sum of all the primes below two million.
+                example question
               </em></p>
               <br>
-              <p>We use the code for problem 7 in order to quickly find the primes up to two million. We then simply return the sum. Much faster and more efficient algorithms involve implementing the Sieve of Eratosthenes or Sieve of Atkin.</p>
+              <p>description example</p>
               <pre><code>example</code></pre>
               <p>
-                Answer: 142913828922
+                Answer: example
                 <br>
-                Average Runtime: 2.6625816 seconds
+                Average Runtime: example
               </p>
               <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
               <h4 class="euler-problem-title">Problem 13 - Large sum</h4>
               <p><em>
-                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.
-                <br><br>
-                Find the sum of all the primes below two million.
+                example question
               </em></p>
               <br>
-              <p>We use the code for problem 7 in order to quickly find the primes up to two million. We then simply return the sum. Much faster and more efficient algorithms involve implementing the Sieve of Eratosthenes or Sieve of Atkin.</p>
+              <p>description example</p>
               <pre><code>example</code></pre>
               <p>
-                Answer: 142913828922
+                Answer: example
                 <br>
-                Average Runtime: 2.6625816 seconds
+                Average Runtime: example
               </p>
               <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
               <h4 class="euler-problem-title">Problem 14 - Longest Collatz sequence</h4>
               <p><em>
-                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.
-                <br><br>
-                Find the sum of all the primes below two million.
+                example question
               </em></p>
               <br>
-              <p>We use the code for problem 7 in order to quickly find the primes up to two million. We then simply return the sum. Much faster and more efficient algorithms involve implementing the Sieve of Eratosthenes or Sieve of Atkin.</p>
+              <p>description example</p>
               <pre><code>example</code></pre>
               <p>
-                Answer: 142913828922
+                Answer: example
                 <br>
-                Average Runtime: 2.6625816 seconds
+                Average Runtime: example
               </p>
               <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
               <h4 class="euler-problem-title">Problem 15 - Lattice paths</h4>
               <p><em>
-                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.
-                <br><br>
-                Find the sum of all the primes below two million.
+                example question
               </em></p>
               <br>
-              <p>We use the code for problem 7 in order to quickly find the primes up to two million. We then simply return the sum. Much faster and more efficient algorithms involve implementing the Sieve of Eratosthenes or Sieve of Atkin.</p>
+              <p>description example</p>
               <pre><code>example</code></pre>
               <p>
-                Answer: 142913828922
+                Answer: example
                 <br>
-                Average Runtime: 2.6625816 seconds
+                Average Runtime: example
               </p>
               <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
