added up to euler #11

--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -406,7 +406,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
                 We can see that 28 is the first triangle number to have over five divisors. What is the value of the first triangle number to have over five hundred divisors?
               </em></p>
               <br>
-              <p>We take an approach to this problem that isn't obvious at first glance. We know that </p>
+              <p>We take an approach to this problem that isn't obvious at first glance. We know that asdasdasdasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum deleniti soluta, vitae labore fuga officiis placeat, natus ex velit alias rem ullam nisi! Libero veniam sit, odit accusamus pariatur non doloremque corporis. Maiores odit, voluptate sed consequuntur quaerat aliquam voluptates eum, explicabo perspiciatis consequatur aperiam quibusdam hic temporibus cumque architecto.</p>
               <pre><code>def euler12():
     primes_up_to_lim = [2]  # keep track of all primes found up to lim; increase lim as needed
     lim = 20000
