--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -71,7 +71,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
             <!-- Page text -->
             <div class="project-content">
 
-              <p>Some questions have been shortened for succinctness. Last updated September 06, 2016.</p>
+              <p>Some questions have been shortened for succinctness. Last updated September 09, 2016.</p>
               <div class="row">
                 <div class="col-xs-12 euler-anchor-links"></div>
               </div>
@@ -627,18 +627,56 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
               <h4 class="euler-problem-title">Problem 15 - Lattice paths</h4>
               <p><em>
-                example question
+                Starting in the top left corner of a 2×2 grid, and only being able to move to the right and down, there are exactly 6 routes to the bottom right corner. How many such routes are there through a 20×20 grid?
               </em></p>
               <br>
-              <p>description example</p>
-              <pre><code>example</code></pre>
+              <p>This question does not require any algorithm or coding to solve. We can see that the number of possible routes is directly related to the number of steps it takes to reach from the top left corner to the bottom right corner. For example, on a 2x2 grid we know it will take exactly 4 steps to reach the end. Specifically, it'll always take 2 downward steps and 2 rightward steps. Thus, the number of distinct combinations of these 4 steps would be C(4,2), i.e. 4 choose 2 (you choose 2 of the 4 possible steps to be either right or down, and the remaining two are assumed to be the other direction). This combinatoric method of finding the solution can be applied for any NxN grid, where the number of possible paths is C(2N,N). Thus, in a 20x20 grid, the number of possible path would be C(40,20) = 40 choose 20.</p>
               <p>
-                Answer: example
-                <br>
-                Average Runtime: example
+                Answer: 137846528820
               </p>
               <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
+              <h4 class="euler-problem-title">Problem 16 - Power digit sum</h4>
+              <p><em>
+                2<sup>15</sup> = 32768 and the sum of its digits is 3 + 2 + 7 + 6 + 8 = 26. What is the sum of the digits of the number 2<sup>1000</sup>?
+              </em></p>
+              <br>
+              <p>2<sup>1000</sup> is easily computed by Python, and from there we iterate through the number and return the sum.</p>
+              <pre><code>def euler16():
+    num = str(2 ** 1000)
+    
+    sum = 0
+    for n in num:
+        sum += int(n)
+
+    return sum</code></pre>
+              <p>
+                Answer: 1366
+                <br>
+                Average Runtime: 0.0001300 seconds
+              </p>
+              <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+              <h4 class="euler-problem-title">Problem 17 - Number letter counts</h4>
+              <p><em>
+                If the numbers 1 to 5 are written out in words: one, two, three, four, five, then there are 3 + 3 + 5 + 4 + 4 = 19 letters used in total. If all the numbers from 1 to 1000 (one thousand) inclusive were written out in words, how many letters would be used? NOTE: Do not count spaces or hyphens. For example, 342 (three hundred and forty-two) contains 23 letters and 115 (one hundred and fifteen) contains 20 letters. The use of "and" when writing out numbers is in compliance with British usage.
+              </em></p>
+              <br>
+              <p>The solution to this question is different from the others in that we now have to either 1. write our own function that spells out each number to count the letters or 2. use a module that already has that functionality to help us with the problem. Going with the latter, a library known as <code>num2words</code> is imported into our code, making the job a whole lot easier for us. We simply now iterate through the given constraints and remove all spaces and hyphens before adding the letter count of each word to our sum.</p>
+              <pre><code>from num2words import num2words
+def euler17():
+    sum = 0
+    for x in range(1, 1001):
+        word = num2words(x).replace(' ', '').replace('-', '')
+        sum += len(word)
+
+    return sum</code></pre>
+              <p>
+                Answer: 21124
+                <br>
+                Average Runtime: 0.0493037 seconds
+              </p>
+              <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
             </div>
           </div>
