--- a/contact/index.html
+++ b/contact/index.html
@@ -62,7 +62,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
               <p>
                 <strong>E-mail: </strong>chendavid96@gmail.com
                 <br>
-                <strong>Resume: </strong>available <a href="/images/prof_pic.jpg" download>here</a>
+                <strong>Resume: </strong>available <a href="/DChen - Resume - Updated Sept. 21 2016.pdf" download>here</a>
                 <br><br>
                 All other contact links are available at page footer.
               </p>
