--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					<p><strong>LINKEDIN</strong>: <a href="https://www.linkedin.com/in/dave-chen" target="_blank">linkedin.com/in/dave-chen</a></p>
 					<p><strong>GITHUB</strong>: <a href="https://github.com/davidchen" target="_blank">github.com/davidchen</a></p>
 
-					<p class="project-stack mt-5 text-center"><a href="#landing">&uparrow; return to top</a></p>
+					<!--<p class="project-stack mt-5 text-center"><a href="#landing">&uparrow; return to top</a></p>-->
 
 				</div>
 
