--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 			<div class="row">
 				<div class="col-12 mt-5">
 					<h3>David Chen</h3>
-					<p>SOFTWARE DEVELOPER</p>
+					<p style="font-family: 'Courier New', monospace; font-weight: normal;">SOFTWARE ENGINEER</p>
 
 					<img class="img-fluid rounded-circle my-5" src="images/prof_pic.jpg"
-					     style="max-height: 120px;" alt="me">
+					     style="max-height: 150px;" alt="profile pic">
 
 					<h6 class="link"><a href="#projects">PROJECTS</a></h6>
 					<h6 class="link"><a href="http://blog.chendav.id" target="_blank">BLOG</a></h6>
@@ -162,7 +162,7 @@
 				<div class="col-10 offset-1 col-xl-8 offset-xl-2">
 					<div class="row project-card">
 						<div class="col-12 col-lg-7 col-xl-4 project-image"><img class="img-fluid"
-						                                                                   src="images/portfolio_ss_16x9.png">
+						                                                                   src="images/portfolio_16x9.jpg">
 						</div>
 						<div class="col-12 col-lg-5 col-xl-8 project-info">
 							<h2 class="project-name">Portfolio</h2>
@@ -194,14 +194,15 @@
 		<div class="col-12">
 
 			<div class="row">
-				<div class="col-12 section-title">
-					<h4>CONTACT</h4>
-				</div>
 
 				<div class="col-12 text-center">
-					<p><strong>EMAIL</strong>: <a href="mailto:chendavid96@gmail.com?Subject=Hello%20David!" target="_top">chendavid96@gmail.com</a></p>
-					<p><strong>LINKEDIN</strong>: <a href="https://www.linkedin.com/in/dave-chen" target="_blank">linkedin.com/in/dave-chen</a></p>
-					<p><strong>GITHUB</strong>: <a href="https://github.com/davidchen" target="_blank">github.com/davidchen</a></p>
+					<p>
+						<a href="mailto:chendavid96@gmail.com?Subject=Hello%20David!" target="_top" class="contact-link">chendavid96@gmail.com</a>
+						<br>
+						<a href="https://www.linkedin.com/in/dave-chen" target="_blank" class="contact-link">linkedin.com/in/dave-chen</a>
+						<br>
+						<a href="https://github.com/davidchen" target="_blank" class="contact-link">github.com/davidchen</a>
+					</p>
 
 					<!--<p class="project-stack mt-5 text-center"><a href="#landing">&uparrow; return to top</a></p>-->
 
